# remote-installer-plasmoid

./: CMakeLists.txt
applets/: CMakeLists.txt
applets/remoteinstallernotifier/: CMakeLists.txt
applets/remoteinstallernotifier/knotifications5/: llxremoteinstallernotifier.notifyrc
applets/remoteinstallernotifier/package/: metadata.desktop
applets/remoteinstallernotifier/package/contents/ui/: main.qml
applets/remoteinstallernotifier/plugin/: RemoteInstallerIndicator.cpp  RemoteInstallerIndicator.h  plugin.cpp  plugin.h  qmldir
debian/: changelog  control  plasma-widget-remote-installer-notifier.install  plasma-widget-remote-installer-notifier.postinst  plasma-widget-remote-installer-notifier.prerm  rules
po/: plasma_applet_org.kde.plasma.remoteinstallernotifier.pot  update_translations.sh
po/ca@valencia/: plasma_applet_org.kde.plasma.remoteinstallernotifier.po
po/en_GB/: plasma_applet_org.kde.plasma.remoteinstallernotifier.po
po/es/: plasma_applet_org.kde.plasma.remoteinstallernotifier.po
